--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages":[
     "pages/welcome/index",
-    "pages/posts/posts"
+    "pages/posts/posts",
+    "pages/posts/post-detail/post-detail"
   ],
   "window":{
     "backgroundTextStyle":"light",
