--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/posts/posts",
     
     "pages/posts/post-detail/post-detail",
-    "pages/movies/movies"
+    "pages/movies/movies",
+    "pages/movies/more-movies/more-movies"
   ],
   "window":{
     "backgroundTextStyle":"light",
